fix bug on mobile

--- a/src/Assets/css/homepage.scss
+++ b/src/Assets/css/homepage.scss
@@ -92,11 +92,9 @@ body {
     }
     .intro-image{
         grid-area: img;
-        width: 100%;
+        width: 90%;
         text-align: center;
-    }
-    img{
-        width: auto;
+        padding: 5vw;
     }
 
 }
@@ -205,7 +203,8 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: center;
-
+            margin-top: 2rem;
+            font-family: "Gilda Display", serif;
             padding-left: 3rem;
             text-align: left;
             p{
@@ -238,9 +237,10 @@ body {
 
             }
             .intro-social{
-                margin-top: 2rem;
+
                 ul{
                     display: flex;
+                    margin-top: 2rem;
 
                 li{
                     list-style: none;
@@ -273,10 +273,10 @@ body {
 }
 
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 767px){
     .container-intro{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 2fr;
         grid-row-gap: 1em;
         grid-template-areas: "text" "img";
 
@@ -297,6 +297,8 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 3rem;
+            place-self: center;
 
         }
     }
